--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
-[submodule "SecLists/autoload"]
-	path = SecLists/autoload
+[submodule "SecLists"]
+	path = SecLists
 	url = https://github.com/danielmiessler/SecLists
-[submodule "big-list-of-naughty-strings/autoload"]
-	path = big-list-of-naughty-strings/autoload
+[submodule "big-list-of-naughty-strings"]
+	path = big-list-of-naughty-strings
 	url = https://github.com/minimaxir/big-list-of-naughty-strings
