--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "SecLists"]
 	path = SecLists
-	url = https://github.com/danielmiessler/SecLists/tree/master
+	url = https://github.com/danielmiessler/SecLists.git
 [submodule "big-list-of-naughty-strings"]
 	path = big-list-of-naughty-strings
-	url = https://github.com/minimaxir/big-list-of-naughty-strings/tree/master
+	url = https://github.com/minimaxir/big-list-of-naughty-strings.git
