--- a/.gitmodules
+++ b/.gitmodules
@@ -6,3 +6,7 @@
 	path = big-list-of-naughty-strings
 	url = https://github.com/minimaxir/big-list-of-naughty-strings.git
     branch = master
+[submodule "fuzzdb"]
+	path = fuzzdb
+	url = https://github.com/fuzzdb-project/fuzzdb.git
+	branch = master
